--- a/src/assets/style/mixins/_mixins.scss
+++ b/src/assets/style/mixins/_mixins.scss
@@ -1,7 +1,18 @@
+@mixin rtlLayout() {
+    html[dir='rtl'] {
+      @content;
+    }
+}
+@mixin input{
+    color: $grey;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0px;
+}
 @mixin card-city-name{
     color: $black;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 23px;
     letter-spacing: 0px;
 };
 @mixin card-weather-discription{
